<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Cacti Reborn</string>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="danger_alert_button">Send Danger Warning</string>
    <string name="last_snmp_request">Last SNMP Request:</string>
    <string name="last_snmp_request_get">Last GET:</string>
    <string name="list_of_managers_label">Registered Managers</string>
    <string name="list_of_messages_from_managers_label">Messages du serveur :</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_index">Retour à l\'application</string>
    <string name="menu_index_old">Index</string>
    <string name="menu_host">Ajouter un appareil</string>
    <string name="menu_graph_view">Graphana</string>
    <string name="menu_settings">Google</string>

    <!--<string name="menu_cacti_index_url">https://m.facebook.com/</string>-->
    <string name="menu_cacti_index_url">http://192.168.200.20/reborn/index.php</string>
    <string name="menu_cacti_index_old_url">http://192.168.200.20/reborn/index.php</string>
    <string name="menu_cacti_host_url">http://192.168.200.20/reborn/devices.php?add</string>
    <string name="menu_cacti_graph_view_url">http://192.168.200.20:8080/?orgId=1</string>
    <string name="menu_cacti_settings_url">https://www.google.fr</string>

    <!-- FINGERPRINT -->


    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">Fingerprint Authentification</string>
    <string name="desc_fingerprint">Merci d\'utiliser votre empreinte digitale pour vous connecter</string>
    <string name="note">(Si ce n\'est pas votre téléphone et au bout de 3 tentatives échouées le téléphone s\'auto-détruira !)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">Vous vous êtes connecté avec succès avec votre empreinte digitale !</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>

</resources>
