<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_index"
            android:icon="@drawable/cactus"
            android:title="@string/menu_index"
            app:itemTextColor="@color/red_cherry"/>

        <item
            android:id="@+id/menu_index_old"
            android:icon="@drawable/cactus"
            android:title="@string/menu_index_old"/>

        <item
            android:id="@+id/menu_host"
            android:icon="@drawable/cactus"
            android:title="@string/menu_host"/>

        <item
            android:id="@+id/menu_graph_view"
            android:icon="@drawable/cactus"
            android:title="@string/menu_graph_view"/>

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/cactus"
            android:title="@string/menu_settings"/>

    </group>

</menu>
